Change server ID from 'ossrh' to 'central' in release.yml